<resources>
    <string name="app_name">WeatherApp</string>

    <string name="text_ok">OK</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cities">Cities</string>
</resources>